Fixed more visuals, added collapsing members list

--- a/public/stylesheets/teaminfo.css
+++ b/public/stylesheets/teaminfo.css
@@ -19,29 +19,12 @@
 
 .container .column {
   width: 25%;
-  height: 100%;
+  height: 7%;
   float: left;
   border-right: 0;
   box-sizing: border-box;
   z-index: 1;
 }
-  
- 
-  .container {
-    width: 100%;
-    
-    
-    overflow: hidden;
-  }
-
-  .container .column {
-    width: 25%;
-    height: 100%;
-    float: left;
-    border-right: 0;
-    box-sizing: border-box;
-    z-index: 1;
-  }
   
   .container .column:last-child {
     border-right: none;
@@ -52,25 +35,11 @@
     position: relative;
     height: 100%;
   }
-  
-  .container .column .content h1 {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-    background: transparent;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    font-size: 2em;
-    border-top: transparent;
-    border-bottom:transparent;
-  }
-  
+
   .container .column .content .box {
     display: block;
     position: absolute;
-    top: 10%;
+    top: 20%;
     box-sizing: border-box;
     padding: 30px;
     width: 90%;
@@ -310,4 +279,8 @@ margin-bottom: 20px;
     background-color: wheat;
     text-align: center;
 }
+label{
 
+color: darkgray;
+
+}
